kanc/src/tests/sample_code/should_succeed/single_file/should_succeed_without_warnings/nullary_variant_with_call_return_type.k
type Unit {
    .C: Unit,
}

type Foo(T: Type) {
    .Bar: Foo(Unit),
}

let unit = match Foo.Bar {
    .Bar => Unit.C,
};
