kanc/src/tests/sample_code/should_fail/single_file/bind/duplicate_fun_params.k
type Foo {
    f: Foo,
}

let f = fun g(U: Type, U: Type): Foo { Foo.f };
 